# leptos-dev

./: .gitignore  Cargo.toml  leptosfmt.toml  rustfmt.toml
db_entities/: Cargo.toml
db_entities/src/: user.rs
db_services/: Cargo.toml
db_services/src/mutation/: mod.rs  post.rs  user.rs
db_services/src/query/: mod.rs  post.rs  user.rs
db_services/src/utils/: jwt.rs
db_utils/: Cargo.toml
db_utils/src/errors/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs
src/: main.rs
src/app/: dark_mode.rs  mod.rs  state.rs
src/app/nav/: mod.rs  navbar.rs
src/app/pages/: dash.rs  home.rs
src/app/pages/user/: login.rs  register.rs
src/server_fns/: mod.rs
src/server_fns/user/: current.rs  login.rs  logout.rs  mod.rs  register.rs
style/: output.css
